--- a/MyNetflix/MyNetflix/Base.lproj/Main.storyboard
+++ b/MyNetflix/MyNetflix/Base.lproj/Main.storyboard
@@ -248,16 +248,73 @@
             <objects>
                 <viewController id="Blf-Or-i5j" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ce7-Bh-AkS">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VDA-8S-sdI">
+                                <rect key="frame" x="0.0" y="44" width="414" height="1473"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TGZ-Ei-sai">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1600"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RPy-3c-eYl">
+                                                <rect key="frame" x="16" y="20" width="382" height="300"/>
+                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="300" id="NaC-DW-ghm"/>
+                                                </constraints>
+                                            </imageView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dZJ-Dc-pnR">
+                                                <rect key="frame" x="16" y="328" width="382" height="600"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pob-6s-vyD">
+                                                        <rect key="frame" x="0.0" y="0.0" width="382" height="600"/>
+                                                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                                    </view>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="600" id="34e-HS-qUw"/>
+                                                </constraints>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="dZJ-Dc-pnR" firstAttribute="leading" secondItem="TGZ-Ei-sai" secondAttribute="leading" constant="16" id="Inp-rW-bbM"/>
+                                            <constraint firstItem="RPy-3c-eYl" firstAttribute="leading" secondItem="TGZ-Ei-sai" secondAttribute="leading" constant="16" id="WN1-wb-D0a"/>
+                                            <constraint firstItem="dZJ-Dc-pnR" firstAttribute="top" secondItem="RPy-3c-eYl" secondAttribute="bottom" constant="8" id="aqp-Ba-iR9"/>
+                                            <constraint firstAttribute="trailing" secondItem="RPy-3c-eYl" secondAttribute="trailing" constant="16" id="bz3-QQ-EBs"/>
+                                            <constraint firstItem="RPy-3c-eYl" firstAttribute="top" secondItem="TGZ-Ei-sai" secondAttribute="top" constant="20" id="e8i-aY-8yA"/>
+                                            <constraint firstAttribute="trailing" secondItem="dZJ-Dc-pnR" secondAttribute="trailing" constant="16" id="p55-Ir-ZZW"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="TGZ-Ei-sai" firstAttribute="leading" secondItem="VDA-8S-sdI" secondAttribute="leading" id="FOO-VD-Y9J"/>
+                                    <constraint firstItem="TGZ-Ei-sai" firstAttribute="top" secondItem="VDA-8S-sdI" secondAttribute="top" id="QX0-dT-U2d"/>
+                                    <constraint firstAttribute="bottom" secondItem="TGZ-Ei-sai" secondAttribute="bottom" id="Rnk-6M-5rz"/>
+                                    <constraint firstAttribute="trailing" secondItem="TGZ-Ei-sai" secondAttribute="trailing" id="bUa-Os-tUw"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="4x7-Q9-5ps"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="vdO-gc-dQg"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="cEW-rw-DWC"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="VDA-8S-sdI" firstAttribute="top" secondItem="cEW-rw-DWC" secondAttribute="top" id="DHy-CZ-een"/>
+                            <constraint firstItem="cEW-rw-DWC" firstAttribute="trailing" secondItem="VDA-8S-sdI" secondAttribute="trailing" id="FYh-tV-Ox3"/>
+                            <constraint firstItem="VDA-8S-sdI" firstAttribute="leading" secondItem="cEW-rw-DWC" secondAttribute="leading" id="H3x-mX-vg0"/>
+                            <constraint firstItem="TGZ-Ei-sai" firstAttribute="width" secondItem="ce7-Bh-AkS" secondAttribute="width" id="VPm-He-yxR"/>
+                            <constraint firstItem="TGZ-Ei-sai" firstAttribute="height" secondItem="ce7-Bh-AkS" secondAttribute="height" priority="250" id="gJN-Gk-Su6"/>
+                            <constraint firstItem="cEW-rw-DWC" firstAttribute="bottom" secondItem="VDA-8S-sdI" secondAttribute="bottom" id="xOh-jE-PLU"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="공개예정" image="play.rectangle.fill" catalog="system" id="pxU-OE-cdZ"/>
+                    <size key="freeformSize" width="414" height="1600"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J18-X4-5SI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3001" y="990"/>
+            <point key="canvasLocation" x="3020" y="1209"/>
         </scene>
         <!--더보기-->
         <scene sceneID="Lca-zO-Qyt">
@@ -514,7 +571,7 @@
     <resources>
         <image name="gear" catalog="system" width="128" height="119"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
-        <image name="img_header" width="658" height="879"/>
+        <image name="img_header" width="400" height="450"/>
         <image name="info.circle" catalog="system" width="128" height="121"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="play.fill" catalog="system" width="116" height="128"/>
@@ -526,6 +583,12 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
